# medicine-recommendations-system

./: README.md  app.py  pyproject.toml  requirements.txt
models/: disease_prediction_model.h5
notebooks/: notebook-1.ipynb
