[project]
name = "medicine-recommendations-system"
version = "0.1.0"
description = "A machine learning-based medicine recommendation system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.1",
    "tensorflow>=2.19.0",
]
